Feat dynamtic config (#2)
* default to using google DNS

* default to a more practical IP default for vLab

* Running container will dynamically update config and start bind9 now

* DNS server runs as non-root user now

* testing covers auto-config logic now

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 install:
-  sudo apt-get install -y bind9utils
+  - sudo apt-get install -y bind9utils
+  - sudo mkdir -p /etc/bind
+  - sudo mkdir -p /var/lib/bind
 
 script:
   make test
